force-app/main/default/objects/Account/fields/Account_Consent_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Consent_Registration_Date__c</fullName>
    <label>Account Consent Registration Date</label>
    <type>DateTime</type>
</CustomField>