force-app/main/default/objects/Account/fields/Account_Consent_Registration_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Consent_Registration_IP_Address__c</fullName>
    <label>Account Consent Registration IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>