force-app/main/default/objects/Account/fields/Account_Consent_Registration_Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Account_Consent_Registration_Source_URL__c</fullName>
    <label>Account Consent Registration Source URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>