force-app/main/default/objects/Account/fields/Account_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Registration_Date__c</fullName>
    <label>Account Registration Date</label>
    <type>Date</type>
</CustomField>