force-app/main/default/objects/Account/fields/Account_Registration_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Registration_Email__c</fullName>
    <label>Account Registration Email</label>
    <type>Email</type>
</CustomField>