force-app/main/default/objects/Account/fields/Account_Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Registration_Id__c</fullName>
    <label>Account Registration Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>