force-app/main/default/objects/Account/fields/Account_Registration_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Registration_Source__c</fullName>
    <label>Account Registration Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intershop</fullName>
            </value>
            <value>
                <fullName>Sampling Form</fullName>
            </value>
            <value>
                <fullName>External Database</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Local Database</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Blokker POS</fullName>
            </value>
            <value>
                <fullName>DE.NL</fullName>
            </value>
            <value>
                <fullName>MDC.FR</fullName>
            </value>
            <value>
                <fullName>a</fullName>
                <isActive>false</isActive>
                <label>a</label>
            </value>
            <value>
                <fullName>b</fullName>
                <isActive>false</isActive>
                <label>b</label>
            </value>
            <value>
                <fullName>c</fullName>
                <isActive>false</isActive>
                <label>c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>