force-app/main/default/objects/Account/fields/Active_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If there is an active subscription this flag will be set to true, if there is no Active subscription, this flag will be set to False.</description>
    <label>Active Subscription</label>
    <type>Checkbox</type>
</CustomField>