force-app/main/default/objects/Account/fields/Average_Order_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_Value_Type__c</fullName>
    <label>Average Order Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Light</fullName>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
            <value>
                <fullName>Very heavy</fullName>
            </value>
            <value>
                <fullName>Extreme</fullName>
            </value>
            <value>
                <fullName>Very extreme</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Type 1</fullName>
                <isActive>false</isActive>
                <label>Type 1</label>
            </value>
            <value>
                <fullName>Type 2</fullName>
                <isActive>false</isActive>
                <label>Type 2</label>
            </value>
            <value>
                <fullName>Type 3</fullName>
                <isActive>false</isActive>
                <label>Type 3</label>
            </value>
            <value>
                <fullName>Type 4</fullName>
                <isActive>false</isActive>
                <label>Type 4</label>
            </value>
            <value>
                <fullName>Type 5</fullName>
                <isActive>false</isActive>
                <label>Type 5</label>
            </value>
            <value>
                <fullName>Type 6</fullName>
                <isActive>false</isActive>
                <label>Type 6</label>
            </value>
            <value>
                <fullName>Type 7</fullName>
                <isActive>false</isActive>
                <label>Type 7</label>
            </value>
            <value>
                <fullName>Type 8</fullName>
                <isActive>false</isActive>
                <label>Type 8</label>
            </value>
            <value>
                <fullName>a</fullName>
                <isActive>false</isActive>
                <label>a</label>
            </value>
            <value>
                <fullName>b</fullName>
                <isActive>false</isActive>
                <label>b</label>
            </value>
            <value>
                <fullName>c</fullName>
                <isActive>false</isActive>
                <label>c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>