force-app/main/default/objects/Account/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angebote</fullName>
            </value>
            <value>
                <fullName>Bosch</fullName>
            </value>
            <value>
                <fullName>Cadbury</fullName>
            </value>
            <value>
                <fullName>Carte Noire</fullName>
            </value>
            <value>
                <fullName>Costa</fullName>
            </value>
            <value>
                <fullName>Douwe Egberts</fullName>
            </value>
            <value>
                <fullName>Evergood</fullName>
            </value>
            <value>
                <fullName>Friele</fullName>
            </value>
            <value>
                <fullName>Gevalia</fullName>
            </value>
            <value>
                <fullName>Grand Mere</fullName>
            </value>
            <value>
                <fullName>Hag</fullName>
            </value>
            <value>
                <fullName>Jacobs</fullName>
            </value>
            <value>
                <fullName>Kenco</fullName>
            </value>
            <value>
                <fullName>Koziol</fullName>
            </value>
            <value>
                <fullName>L'Or</fullName>
            </value>
            <value>
                <fullName>Let</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Maison du Café</fullName>
            </value>
            <value>
                <fullName>Marabou</fullName>
            </value>
            <value>
                <fullName>Marcilla</fullName>
            </value>
            <value>
                <fullName>Maxwell House</fullName>
            </value>
            <value>
                <fullName>Milka</fullName>
            </value>
            <value>
                <fullName>Oreo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pickwick</fullName>
            </value>
            <value>
                <fullName>Ritzenhoff</fullName>
            </value>
            <value>
                <fullName>Senseo</fullName>
            </value>
            <value>
                <fullName>Suchard</fullName>
            </value>
            <value>
                <fullName>Tassimo</fullName>
            </value>
            <value>
                <fullName>Twinings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>