force-app/main/default/objects/Account/fields/Brewers_Selected__c.field-meta.xml
<CustomField>
    <fullName>Brewers_Selected__c</fullName>
    <description
  >Used to filter presentation on the web based on user choice of picklist values. This is not a brewer registration.</description>
    <inlineHelpText
  >Used to filter presentation on the web based on user choice of picklist values. This is not a brewer registration.</inlineHelpText>
    <label>Brewers Selected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brewers_selected</valueSetName>
    </valueSet>
</CustomField>