force-app/main/default/objects/Account/fields/Chamber_of_Commerce_Number__c.field-meta.xml
<CustomField>
    <fullName>Chamber_of_Commerce_Number__c</fullName>
    <label>Chamber of Commerce Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>