force-app/main/default/objects/Account/fields/Commercial_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Newsletter</label>
    <type>Checkbox</type>
</CustomField>