force-app/main/default/objects/Account/fields/Confirmation_Completion_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Completion_Email_Address__c</fullName>
    <label>Confirmation Completion Email Address</label>
    <type>Email</type>
</CustomField>