force-app/main/default/objects/Account/fields/Consent_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Confirmation_Date__c</fullName>
    <label>Commercial Consent Confirmation Date</label>
    <type>DateTime</type>
</CustomField>