force-app/main/default/objects/Account/fields/Consent_Confirmation_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Consent_Confirmation_IP_Address__c</fullName>
    <label>Commercial Consent Confirm IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>