force-app/main/default/objects/Account/fields/Consent_Confirmation_URL__c.field-meta.xml
<CustomField>
    <fullName>Consent_Confirmation_URL__c</fullName>
    <label>Commercial Consent Confirmation URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>