force-app/main/default/objects/Account/fields/Consent_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Registration_Date__c</fullName>
    <label>Commercial Consent Registration Date</label>
    <type>DateTime</type>
</CustomField>