force-app/main/default/objects/Account/fields/Consent_Registration_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Consent_Registration_IP_Address__c</fullName>
    <label>Commercial Consent Reg. IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>