force-app/main/default/objects/Account/fields/Consent_Registration_Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Consent_Registration_Source_URL__c</fullName>
    <label>Commercial Consent Reg. Source URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>