force-app/main/default/objects/Account/fields/Consent_Text__c.field-meta.xml
<CustomField>
    <fullName>Consent_Text__c</fullName>
    <label>Commercial Consent Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>