force-app/main/default/objects/Account/fields/Consent_Text_Version__c.field-meta.xml
<CustomField>
    <fullName>Consent_Text_Version__c</fullName>
    <label>Commercial Consent Text Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>