force-app/main/default/objects/Account/fields/Consent_Withdrawn_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Withdrawn_Date__c</fullName>
    <label>Commercial Consent Withdrawn Date</label>
    <type>DateTime</type>
</CustomField>