force-app/main/default/objects/Account/fields/CRM_Migration__c.field-meta.xml
<CustomField>
    <fullName>CRM_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For AU Migrated Accounts</description>
    <label>CRM Migration</label>
    <type>Checkbox</type>
</CustomField>