force-app/main/default/objects/Account/fields/Deletion_Flag__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deletion Flag</label>
    <type>Checkbox</type>
</CustomField>