force-app/main/default/objects/Account/fields/Deletion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Reason__c</fullName>
    <label>Deletion Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>