force-app/main/default/objects/Account/fields/Double_Opt_in_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Double_Opt_in_Email_Address__c</fullName>
    <label>Double Opt-in Email Address</label>
    <type>Email</type>
</CustomField>