force-app/main/default/objects/Account/fields/Double_Opt_in_Reminder_Email_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Double_Opt_in_Reminder_Email_Send_Date__c</fullName>
    <label>Double Opt-in Reminder Email Send Date</label>
    <type>DateTime</type>
</CustomField>