force-app/main/default/objects/Account/fields/Double_Opt_in_Reminder_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Double_Opt_in_Reminder_Send_Date__c</fullName>
    <formula
  >TEXT(DATEVALUE( Double_Opt_in_Reminder_Email_Send_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Double Opt-in Reminder Send Date</label>
    <type>Text</type>
</CustomField>