force-app/main/default/objects/Account/fields/Email_Confirm_URL__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirm_URL__c</fullName>
    <label>Email Confirm URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>