force-app/main/default/objects/Account/fields/EmailClickRecency__c.field-meta.xml
<CustomField>
    <fullName>EmailClickRecency__c</fullName>
    <label>E-mailClickRecency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RecentClicker</fullName>
            </value>
            <value>
                <fullName>FrequentClicker</fullName>
            </value>
            <value>
                <fullName>ActiveClicker</fullName>
                <label>Active Clicker</label>
            </value>
            <value>
                <fullName>Clicker</fullName>
            </value>
            <value>
                <fullName>PassiveClicker</fullName>
            </value>
            <value>
                <fullName>NonClicker</fullName>
            </value>
            <value>
                <fullName>InactiveClicker</fullName>
            </value>
            <value>
                <fullName>Freqent  clicker</fullName>
                <isActive>false</isActive>
                <label>Freqent  clicker</label>
            </value>
            <value>
                <fullName>Inactive clicker</fullName>
                <isActive>false</isActive>
                <label>Inactive clicker</label>
            </value>
            <value>
                <fullName>Non clicker</fullName>
                <isActive>false</isActive>
                <label>Non clicker</label>
            </value>
            <value>
                <fullName>Passive clicker</fullName>
                <isActive>false</isActive>
                <label>Passive clicker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>