force-app/main/default/objects/Account/fields/EmailOpenRecency__c.field-meta.xml
<CustomField>
    <fullName>EmailOpenRecency__c</fullName>
    <label>E-mailOpenRecency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RecentOpener</fullName>
            </value>
            <value>
                <fullName>FrequentOpener</fullName>
            </value>
            <value>
                <fullName>ActiveOpener</fullName>
                <label>Active Opener</label>
            </value>
            <value>
                <fullName>Opener</fullName>
            </value>
            <value>
                <fullName>PassiveOpener</fullName>
            </value>
            <value>
                <fullName>NonOpener</fullName>
            </value>
            <value>
                <fullName>InactiveOpener</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>