force-app/main/default/objects/Account/fields/Favorite_Brand__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Brand__c</fullName>
    <label>Favorite Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Brand</valueSetName>
    </valueSet>
</CustomField>