force-app/main/default/objects/Account/fields/Favorite_Drink_2__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Drink_2__c</fullName>
    <label>Favorite Drink 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>