force-app/main/default/objects/Account/fields/Favorite_Drink_3__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Drink_3__c</fullName>
    <label>Favorite Drink 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>