force-app/main/default/objects/Account/fields/Favorite_Flavour__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Flavour__c</fullName>
    <label>Favorite Flavour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Flavour</valueSetName>
    </valueSet>
</CustomField>