force-app/main/default/objects/Account/fields/Favorite_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Product_Group__c</fullName>
    <label>Favorite Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Group</valueSetName>
    </valueSet>
</CustomField>