force-app/main/default/objects/Account/fields/Has_Ordered_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Has_Ordered_Accessories__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered Accessories</label>
    <type>Checkbox</type>
</CustomField>