force-app/main/default/objects/Account/fields/Has_Ordered_Decaf__c.field-meta.xml
<CustomField>
    <fullName>Has_Ordered_Decaf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered Decaf</label>
    <type>Checkbox</type>
</CustomField>