force-app/main/default/objects/Account/fields/Has_Ordered_Tea__c.field-meta.xml
<CustomField>
    <fullName>Has_Ordered_Tea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered Tea</label>
    <type>Checkbox</type>
</CustomField>