force-app/main/default/objects/Account/fields/HighCO_synced__c.field-meta.xml
<CustomField>
    <fullName>HighCO_synced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This denotes if the Customer account is found in HighCO CRM Platform. Specific for France brands.</description>
    <inlineHelpText>This denotes if the Customer account is found in HighCO CRM Platform. Specific for France brands.</inlineHelpText>
    <label>HighCO synced?</label>
    <type>Checkbox</type>
</CustomField>