force-app/main/default/objects/Account/fields/Inactive_Account_Last_Check__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Account_Last_Check__c</fullName>
    <label>Inactive Account Last Check</label>
    <type>DateTime</type>
</CustomField>