force-app/main/default/objects/Account/fields/IP_Warming_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>IP_Warming_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IP_Warming_Email_Sent__c</label>
    <type>Checkbox</type>
</CustomField>