force-app/main/default/objects/Account/fields/Is_Guest__c.field-meta.xml
<CustomField>
    <fullName>Is_Guest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Guest Checkout</label>
    <type>Checkbox</type>
</CustomField>