force-app/main/default/objects/Account/fields/Last_Email_clicked__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_clicked__c</fullName>
    <label>Last E-mail clicked</label>
    <type>Date</type>
</CustomField>