force-app/main/default/objects/Account/fields/Last_Email_opened__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_opened__c</fullName>
    <label>Last E-mail opened</label>
    <type>Date</type>
</CustomField>