force-app/main/default/objects/Account/fields/Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Date__c</fullName>
    <label>Last Order Date</label>
    <summarizedField>Order__c.Start_Date__c</summarizedField>
    <summaryForeignKey>Order__c.Customer__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>