force-app/main/default/objects/Account/fields/LastVoucher__c.field-meta.xml
<CustomField>
    <fullName>LastVoucher__c</fullName>
    <label>LastVoucher</label>
    <length>42</length>
    <type>Text</type>
</CustomField>