force-app/main/default/objects/Account/fields/LastVoucherClaimDate__c.field-meta.xml
<CustomField>
    <fullName>LastVoucherClaimDate__c</fullName>
    <label>LastVoucherClaimDate</label>
    <type>Date</type>
</CustomField>