force-app/main/default/objects/Account/fields/LoginLockDatetime__c.field-meta.xml
<CustomField>
    <fullName>LoginLockDatetime__c</fullName>
    <label>LoginLockDatetime</label>
    <type>DateTime</type>
</CustomField>