force-app/main/default/objects/Account/fields/LOrAUMigratedAccounts__c.field-meta.xml
<CustomField>
    <fullName>LOrAUMigratedAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOrAUMigratedAccounts</label>
    <type>Checkbox</type>
</CustomField>