force-app/main/default/objects/Account/fields/Loyalty_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Email_Sent_Date__c</fullName>
    <label>Loyalty Email Sent Date</label>
    <type>DateTime</type>
</CustomField>