force-app/main/default/objects/Account/fields/Loyalty_Last_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Last_Transaction_Date__c</fullName>
    <label>Loyalty Last Transaction Date</label>
    <type>Date</type>
</CustomField>