force-app/main/default/objects/Account/fields/Loyalty_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loyalty Newsletter</label>
    <type>Checkbox</type>
</CustomField>