force-app/main/default/objects/Account/fields/Loyalty_Points_Odd__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points_Odd__c</fullName>
    <formula>IF(MOD( Loyalty_Total_Points__c , 2) = 0, false , true)</formula>
    <label>Loyalty Points Odd</label>
    <type>Checkbox</type>
</CustomField>