force-app/main/default/objects/Account/fields/Loyalty_Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Total_Points__c</fullName>
    <label>Loyalty Total Points</label>
    <summarizedField>Loyalty__c.Loyalty_Total_Points__c</summarizedField>
    <summaryForeignKey>Loyalty__c.Loyalty_Consumer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>