force-app/main/default/objects/Account/fields/LoyaltyCustomerID__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyCustomerID__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>LoyaltyCustomerID</label>
    <type>AutoNumber</type>
</CustomField>