force-app/main/default/objects/Account/fields/Machine_Selection__c.field-meta.xml
<CustomField>
    <fullName>Machine_Selection__c</fullName>
    <label>Machine Selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>