force-app/main/default/objects/Account/fields/MCDB__c.field-meta.xml
<CustomField>
    <fullName>MCDB__c</fullName>
    <label>MCDB Transaction Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>