force-app/main/default/objects/Account/fields/Net_Promotor_Score__c.field-meta.xml
<CustomField>
    <fullName>Net_Promotor_Score__c</fullName>
    <label>Net Promotor Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>