force-app/main/default/objects/Account/fields/Net_Promotor_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Net_Promotor_Score_Date__c</fullName>
    <label>Net Promotor Score Date</label>
    <type>Date</type>
</CustomField>