force-app/main/default/objects/Account/fields/Net_Promotor_Score_Source__c.field-meta.xml
<CustomField>
    <fullName>Net_Promotor_Score_Source__c</fullName>
    <label>Net Promotor Score Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultix</fullName>
            </value>
            <value>
                <fullName>Starred</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>a</fullName>
                <isActive>false</isActive>
                <label>a</label>
            </value>
            <value>
                <fullName>b</fullName>
                <isActive>false</isActive>
                <label>b</label>
            </value>
            <value>
                <fullName>c</fullName>
                <isActive>false</isActive>
                <label>c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>