force-app/main/default/objects/Account/fields/New_Email_Confirm_URL__c.field-meta.xml
<CustomField>
    <fullName>New_Email_Confirm_URL__c</fullName>
    <label>New Email Confirm URL</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>