force-app/main/default/objects/Account/fields/New_Email_Request_Datetime__c.field-meta.xml
<CustomField>
    <fullName>New_Email_Request_Datetime__c</fullName>
    <label>New Email Request Datetime</label>
    <type>DateTime</type>
</CustomField>