force-app/main/default/objects/Account/fields/New_Registered_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Registered_Date__c</fullName>
    <label>New Registered Date</label>
    <type>DateTime</type>
</CustomField>