force-app/main/default/objects/Account/fields/Newsletter_Consent__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For enabling the correct selection in Salesforce Marketing cloud</description>
    <label>Newsletter Consent</label>
    <type>Checkbox</type>
</CustomField>