force-app/main/default/objects/Account/fields/Number_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Orders__c</fullName>
    <label>Number of Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>