force-app/main/default/objects/Account/fields/NumberOfFailedLogins__c.field-meta.xml
<CustomField>
    <fullName>NumberOfFailedLogins__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>NumberOfFailedLogins</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>